project/deployments/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-dev-app
  namespace: otus-msa-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://auth-app.otus-msa-project.svc.cluster.local/check
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /file-dev(/|$)(.*) # Направляем все запросы к file-dev-app
            pathType: Prefix
            backend:
              service:
                name: file-dev-app
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
  namespace: otus-msa-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://auth-app.otus-msa-project.svc.cluster.local/check
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User"
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /users(/|$)(.*) # Направляем все запросы к user-app
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-app
  namespace: otus-msa-project
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-app
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-app
                port:
                  number: 80
          - path: /signin
            pathType: Prefix
            backend:
              service:
                name: auth-app
                port:
                  number: 80
